[package]
authors = ["chrispaig3"]
name = "lp"
version = "0.1.13"
repository = "https://github.com/chrispaig3/lp"
description = "An embeddable plugin system for Rust applications."
edition = "2024"
license = "MIT"

[dependencies]
ron = "0.10.1"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
