[package]
authors = ["chrispaig3"]
name = "lp"
version = "0.1.14"
repository = "https://github.com/chrispaig3/lp"
description = "An embeddable plugin system for Rust applications."
edition = "2024"
license = "MIT"

#[features]
#default = []
#dynamic-loading = ["libloading"]

[dependencies]
ron = "0.10.1"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
libloading = { version = "0.8.8"}
