[package]
authors = ["chrispaig3"]
name = "lp"
version = "0.2.1"
repository = "https://github.com/chrispaig3/lp"
description = "An embeddable plugin system for Rust applications."
categories = ["plugin-system", "dynamic-loading", "model-context-protocol"]
edition = "2024"
license = "MIT"

[features]
default = []
mcp = ["rmcp", "tokio"]
dynamic-loading = ["libloading"]

[dependencies]
ron = "0.10.1"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
#Copyright © 2015, Simonas Kazlauskas

#Permission to use, copy, modify, and/or distribute this software for any purpose with or without
#fee is hereby granted, provided that the above copyright notice and this permission notice appear
#in all copies.

#THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS
#SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE
#AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
#WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT,
#NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF
#THIS SOFTWARE.
libloading = { version = "0.8.8", optional = true }
rmcp = { version = "0.3.0", optional = true }
tokio = { version = "1.46.1", optional = true }
thiserror = "2.0.12"
